--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@coinbase/onchainkit": "0.11.0",
     "@ethereum-attestation-service/eas-sdk": "^1.5.0",
+    "@vercel/postgres": "^0.8.0",
+    "drizzle-orm": "^0.30.10",
     "next": "13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
