--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@ethereum-attestation-service/eas-sdk": "^1.5.0",
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.30.10",
-    "next": "13.5.6",
+    "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^2.7.1"
