--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@coinbase/onchainkit": "0.11.0",
     "@ethereum-attestation-service/eas-sdk": "^1.5.0",
     "@vercel/postgres": "^0.8.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
     "next": "^14.1.1",
     "react": "^18.2.0",
