--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@coinbase/onchainkit": "0.11.0",
     "@ethereum-attestation-service/eas-sdk": "^1.5.0",
+    "@vercel/og": "^0.6.2",
     "@vercel/postgres": "^0.8.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
