--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@coinbase/onchainkit": "0.11.0",
     "@ethereum-attestation-service/eas-sdk": "^1.5.0",
+    "@neynar/nodejs-sdk": "^1.22.0",
     "@vercel/og": "^0.6.2",
     "@vercel/postgres": "^0.8.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
+    "frames.js": "^0.15.2",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
